Fix LinkedIn link in index.html
Updated the LinkedIn link in the social icons section.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="home-sci">
             <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jon-randy-nisperos-095866167/"><i class="bx bxl-linkedin"></i></a>
             <a href="#"><i class="bx bxl-twitter"></i></a>
         </div>
 
@@ -48,4 +48,5 @@
 </body>
 
 </html>
+
 <!-- https://codehalweb.com/responsive-portfolio-website/ -->
